--- a/src/typography/index.css
+++ b/src/typography/index.css
@@ -1,3 +1,4 @@
 @import "./fzfwzhuzimincho/index.css";
 @import "./novecento/index.css";
 @import "./source-han-sans/index.css";
+@import "./pleasure/index.css";
